--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
+  - jekyll-seo-tag
+
+title: Eric Pihlstrom
+description: Welcome to my website!
+show_downloads: true
