--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,3 @@
-theme: jekyll-theme-cayman
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-seo-tag
-
 title: Eric Pihlstrom
 description: Welcome to my website!
-show_downloads: true
+show_downloads: false
